[project]
name = "sneakernet_firmwware_validation"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pywifi = "^1.1.12"
requests = "^2.32.3"

