[package]
name = "sneakernet"
version = "0.1.0"
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
log = "*"
static_cell = "*"
heapless = "*"
embassy-net = { version = "*", features = ["medium-ethernet", "proto-ipv4", "tcp"] }
embassy-executor = "*"
embassy-time = "*"
edge-dhcp = "*"
edge-nal = "*"
edge-nal-embassy = "*"