[package]
name = "sneakernet-esp32"
version = "0.1.0"
license = "Apache-2.0"
publish = false
edition = "2021"

[[bin]]
name = "sneakernet-esp32"
path = "src/bin/main.rs"

[dependencies]
sneakernet = { path = ".." }

esp-backtrace = { version = "*", features = [
    "exception-handler",
    "panic-handler",
    "println",
    "custom-halt",       # reboot upon halt
] }
esp-println = { version = "*", features = ["log-04", "timestamp"] }
esp-hal = { version = "*", features = ["log"] }
esp-wifi = { version = "*", features = ["wifi"] }
esp-alloc = "*"

esp-hal-embassy = "*"
embassy-executor = { version = "*", features = ["task-arena-size-20480"] }


[features]
default = ["esp32"]

esp32 = [
    "esp-backtrace/esp32",
    "esp-println/esp32",
    "esp-hal/esp32",
    "esp-wifi/esp32",
    "esp-hal-embassy/esp32",
]


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
