[package]
edition = "2021"
name = "sneakernet-esp32"
authors = ["Stephen Holstein"]
readme = "README.md"
version = "0.1.0"

[dependencies]
esp-backtrace = { version = "0.11", features = ["exception-handler", "panic-handler", "println"] }
esp-hal = { version = "0.17", features = ["log"] }
esp-println = { version = "0.9", features = ["log"] }

[dev-dependencies]

[features]
esp32   = ["esp-hal/esp32",   "esp-backtrace/esp32",   "esp-println/esp32"]
esp32h2 = ["esp-hal/esp32h2", "esp-backtrace/esp32h2", "esp-println/esp32h2"]
esp32s2 = ["esp-hal/esp32s2", "esp-backtrace/esp32s2", "esp-println/esp32s2"]
esp32s3 = ["esp-hal/esp32s3", "esp-backtrace/esp32s3", "esp-println/esp32s3"]
esp32c2 = ["esp-hal/esp32c2", "esp-backtrace/esp32c2", "esp-println/esp32c2"]
esp32c3 = ["esp-hal/esp32c3", "esp-backtrace/esp32c3", "esp-println/esp32c3"]
esp32c6 = ["esp-hal/esp32c6", "esp-backtrace/esp32c6", "esp-println/esp32c6"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
# debug-assertions = false
# incremental = false
# opt-level = 3
# overflow-checks  = false

