[package]
edition = "2021"
name = "sneakernet-rp2040"
authors = ["Stephen Holstein"]
readme = "README.md"
version = "0.1.0"

[dependencies]
panic-abort = "0.3.2"

# RP2040 support
embassy-rp.version = "0.1"
embassy-rp.features = ["critical-section-impl", "rom-func-cache", "intrinsics"] 

# cortex-m support
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
embassy-executor.version = "0.5"
embassy-executor.features = ["arch-cortex-m", "executor-thread", "executor-interrupt"]


# Sneakernet support
sneakernet = { path="../sneakernet" }


[dev-dependencies]
panic-probe = { version = "0.3", features = ["print-defmt"] }

# # this lets you use `cargo fix`!
# [[bin]]
# name = "sneakernet"
# test = false
# bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
