[package]
edition = "2021"
name = "sneakernet-rp2040"
authors = ["Stephen Holstein"]
readme = "README.md"
version = "0.1.0"

[dependencies]
# panic-abort = "0.3"   // requires nightly
panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt = "0.3"
defmt-rtt = "0.4"
heapless = { version = "0.8.0", default-features = false }

# RP2040 support
embassy-rp = { version = "0.1",  features = ["critical-section-impl", "rom-func-cache", "intrinsics", "defmt"] }
cyw43 = { version = "0.1", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.1", features = ["defmt", "overclock"] }

# cortex-m support
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
embassy-executor = { version = "0.5", features = ["arch-cortex-m", "executor-thread", "executor-interrupt"] }

# embassy support
embassy-net = { version = "0.4.0", features = ["defmt", "medium-ip", "proto-ipv4", "udp", "tcp"] }
embassy-net-driver = { version = "0.2.0", features = ["defmt"] }
static_cell = "2"
portable-atomic = { version = "1", features = ["critical-section"] }

# Sneakernet support
sneakernet = { path="../sneakernet" }

[dev-dependencies]
panic-probe = { version = "0.3", features = ["print-defmt"] }

# # this lets you use `cargo fix`!
# [[bin]]
# name = "sneakernet"
# test = false
# bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
