[package]
edition = "2021"
name = "sneakernet"
authors = ["Stephen Holstein"]
readme = "README.md"
version = "0.1.0"

[dependencies]
embassy-net = "0.4.0"

embedded-sdmmc = "0.7"

[dev-dependencies]


[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
